[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
cortex-m-rtic = "0.5.5"

# Panic handlers, comment all but one to generate doc!
panic-halt = "0.2.0"

# Uncomment for the panic example.
panic-itm = "0.4.2"

# Uncomment for the rtt-timing example.
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

# Uncomment for the panic example.
panic-semihosting = "0.5.6"

# Tracing
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[dependencies.stm32f4]
version = "0.12.1"
features = ["stm32f411", "rt"]

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations



# [features]
# nightly = ["cortex-m/inline-asm"]

# # this lets you use `cargo fix`!
# [[bin]]
# name = "app"
# test = false
# bench = false

# [profile.release]
# codegen-units = 1 # better optimizations
# debug = true      # symbols are nice and they don't increase the size on Flash
# lto = true        # better optimizations
